# incident-response-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml  serve.py
playbooks/: brute_force_attack.yml  data_exfiltration.yml  suspicious_process.yml
src/: actions.py  api.py  approvals.py  audit.py  engine.py  pending.py  playbook.py  templating.py
src/clients/: base.py  directory.py  edr.py  firewall.py  notifier.py
tests/: test_api.py  test_approval_flow.py  test_edr.py  test_engine.py  test_notifier.py  test_playbook.py
