[project]
name = "incident-response-automation"
version = "0.1.0"
description = "Automated SOC playbook engine for incident response"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
